--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,3 +1,20 @@
-<p>
-  list works!
-</p>
+<div>
+  <mat-spinner *ngIf="(isLoading | async) === true" color="primary"></mat-spinner>
+  <mat-grid-list *ngIf="(isLoaded | async) === true" cols="3" rowHeight="4:3">
+    <mat-grid-tile *ngFor="let todo of todos | async">
+      <mat-card class="todo">
+        <mat-card-header>
+          <mat-card-title>
+            <span [ngClass]="{ 'text-stroke': todo.completed }">{{todo.title}}</span>
+          </mat-card-title>
+        </mat-card-header>
+        <mat-card-actions>
+          <mat-checkbox (change)="onTodoStateChange(todo.id, !todo.completed)" [checked]="todo.completed">
+            Mark as done
+          </mat-checkbox>
+          <a mat-button [routerLink]="['/todos', todo.id]"><mat-icon>assignment</mat-icon>View details</a>
+        </mat-card-actions>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
