--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,7 +6,7 @@
 
 //
 @import './variables';
+@import './reset';
+@import './mixins';
+@import './helpers';
 @import './main';
-
-// components
-@import '../app/app.component';
