--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -1,4 +1,4 @@
 <div>
   <mat-spinner *ngIf="(isLoading | async) === true" color="primary"></mat-spinner>
-  <todo-detail-form *ngIf="(isLoaded | async) === true" [data]="todo | async"></todo-detail-form >
+  <todo-detail-form *ngIf="(isLoaded | async) === true" [data]="todo | async" [mode]="mode"></todo-detail-form >
 </div>
