--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -39,3 +39,16 @@ h3,
 
 h4,
 .h4-like { font-size: 1.125rem; }
+
+
+.main {
+  padding-top: 5px;
+  position: relative;
+}
+
+.main-progress-bar {
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
