--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -74,7 +74,7 @@ p::first-letter {
 // SEPARATOR
 hr {
   border: 0;
-  border-bottom: 1px solid $color-black;
+  border-bottom: 1px solid;
   height: 0;
   margin-bottom: $space-m;
   margin-top: $space-m;
