--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,7 +6,8 @@
 
 //
 @import './variables';
-@import './reset';
 @import './mixins';
+@import './animations';
+@import './reset';
 @import './helpers';
 @import './main';
