--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<header>
+<header class="main-header">
   <mat-toolbar role="header">
-    <div class="main-header text-center" >
+    <div class="main-header-content text-center" >
       <a *ngIf="shouldDisplayBackButton" class="main-header-back-btn" mat-icon-button routerLink="/todos">
         <mat-icon>chevron_left</mat-icon>
       </a>
