--- a/src/app/detail/detail-form.component.html
+++ b/src/app/detail/detail-form.component.html
@@ -12,12 +12,12 @@
     >
   </mat-form-field>
   <ul *ngIf="mode === 'edition'" class="list-reset mv-m">
-    <li>Created on {{data.created_at | date}}</li>
-    <li *ngIf="data.modified_at">Modified on {{data.modified_at | date}}</li>
+    <li>Created at {{data.created_at | date: 'dd/MM/yyyy HH:mm:ss'}}</li>
+    <li *ngIf="data.modified_at">Modified at {{data.modified_at | date: 'dd/MM/yyyy HH:mm:ss'}}</li>
     <li>
       Status:
       <mat-form-field class="ml-xs">
-        <mat-select formControlName="state" placeholder="Choose a state" required [(ngModel)]="data.completed" (change)="onStateChange()">
+        <mat-select formControlName="state" required [(ngModel)]="data.completed" (change)="onStateChange()">
           <mat-option [value]="false">Pending</mat-option>
           <mat-option [value]="true">Completed</mat-option>
         </mat-select>
