--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -2,13 +2,9 @@ body {
   background-color: $color-white;
   color: $color-black;
   font-family: $font-text;
-  font-size: $font-size-mobile;
+  font-size: 14px;
   font-weight: $font-weight-regular;
   line-height: $lh-dflt;
-
-  @media screen and (min-width: $screen-tablet-portrait) {
-    font-size: $font-size-desktop;
-  }
 }
 
 b,
@@ -21,6 +17,7 @@ h1,
 h2,
 h3,
 h4,
+h5,
 .h1-like,
 .h2-like,
 .h3-like,
@@ -30,15 +27,19 @@ h4,
 }
 
 h1,
-.h1-like { font-size: 2rem; }
+.h1-like { font-size: 2em; }
 
 h2,
-.h2-like { font-size: 1.5rem; }
+.h2-like { font-size: 1.5em; }
 
 h3,
-.h3-like { font-size: 1.375rem; }
+.h3-like { font-size: 1.17em; }
 
 h4,
-.h4-like { font-size: 1.25rem; }
+.h4-like { font-size: 1em; }
 
-hr { border-bottom-color: $color-grey; }
+hr {
+  border-bottom-color: $color-grey;
+  margin-bottom: $space-m;
+  margin-top: $space-m;
+}
