--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,8 +6,10 @@
 
 //
 @import './variables';
+@import './functions';
 @import './mixins';
 @import './animations';
-@import './reset';
 @import './helpers';
+@import './grid';
+@import './reset';
 @import './main';
