Update list item style Fix todos reducer

--- a/src/app/list/list-item.component.scss
+++ b/src/app/list/list-item.component.scss
@@ -41,5 +41,5 @@
 .todo-list-item-actions {
   align-items: center;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
